--- a/pub/index.html
+++ b/pub/index.html
@@ -8,13 +8,17 @@
   <meta charset="utf-8">
   <style>
     body { padding-top: 70px; }
-    .navbar-brand { text-transform: uppercase; cursor: pointer;}
+    thead th { text-align:center; }
+    thead th a { display:block; }
+    thead th a:hover { text-decoration:none; }
+
   </style>
   <script src="js/jquery.min.js"></script>
 	<script>
+    var app = localStorage.index;
 		function startTime() {
 			var d = new Date()
-			  , h = d.getHours()
+        , h = d.getHours()
 			  , m = d.getMinutes()
 			  , o = (60 - d.getSeconds())*1000
 			  , m = checkTime(m)
@@ -25,9 +29,73 @@
       document.title = c;
 		}
 		function checkTime(i) { return (i < 10 ? i = "0" + i : i); }
+    function buildCal() {
+      if(app == null) {
+			  var today = new Date();
+        app = {"m":today.getMonth(),"y":today.getFullYear()};
+        localStorage.index = JSON.stringify(app);
+      }else{
+        if(typeof app === 'string') app = JSON.parse(app);
+      }
+      var mon = ["January","February","March","April","May","June","July","August","September","October","November","December"]
+        , first = new Date(app.y, app.m, 1).getDay()
+        , last = new Date(app.y, app.m+1, 0).getDate()
+        , html = "<tr>"
+        , day = 0
+        ;
+      $("#title").html(mon[app.m]+" "+app.y);
+      for(i=0;i<first;i++) {
+        html+= "<td></td>";
+        day++;
+      }
+      for(i=1;i<=last;i++) {
+        if(day%7==0) {
+          html+="</tr><tr>";
+        }
+        html+= "<td>"+i+"</td>";
+        day++;
+      }
+      for(i=0;i<6;i++) {
+        if(day%7==0) {
+          html+="</tr>";
+          continue;
+        }
+        html+= "<td></td>";
+        day++;
+      }
+      $("tbody").html(html);
+    }
+    function prev() {
+      if(app.m == 0) {
+        app.m = 11;
+        app.y--;
+      }else{
+        app.m--;
+      }
+      localStorage.index = JSON.stringify(app);
+      buildCal();
+    }
+    function curr() {
+			var today = new Date();
+      app = {"m":today.getMonth(),"y":today.getFullYear()};
+      localStorage.index = JSON.stringify(app);
+      buildCal();
+    }
+    function next() {
+      if(app.m == 11) {
+        app.m = 0;
+        app.y++;
+      }else{
+        app.m++;
+      }
+      localStorage.index = JSON.stringify(app);
+      buildCal();
+    }
     $(document).ready(function() {
+      buildCal();
       var app = {
-        "audio": {"h":"audio.php","i":"music"},
+        "AUDIO": {"h":"audio.php","i":"music"},
+        "SSH": {"h":"ssh.php","i":"console"},
       };
       startTime();
       $.each(app,function(k,v) {
@@ -48,7 +116,31 @@
   </nav>
   <div class="jumbotron">
     <div class="container">
-      <h1 id="clock"></h1>
+      <h1 id="clock" class="text-center"></h1>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
+            <th colspan="5"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title"></span></a></th>
+            <th><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
+          </tr>
+          <tr>
+            <th>Sunday</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
     </div>
   </div>
 </body></html>
