add video editor db, in progress

--- a/pub/index.html
+++ b/pub/index.html
@@ -95,6 +95,9 @@
       buildCal();
       var app = {
         "AUDIO": {"h":"audio.php","i":"music"},
+        "VIDEO": {"h":"video.php","i":"film"},
+        "EDITOR": {"h":"editor.php","i":"pencil"},
+        "DB": {"h":"db.php","i":"hdd"},
         "SSH": {"h":"ssh.php","i":"console"},
       };
       startTime();
