--- a/pub/index.html
+++ b/pub/index.html
@@ -105,8 +105,9 @@
       var app = {
         "AUDIO": {"h":"audio.php","i":"music"},
         "VIDEO": {"h":"video.php","i":"film"},
-        "EDITOR": {"h":"editor.php","i":"pencil"},
+        "EDIT": {"h":"editor.php","i":"pencil"},
         "DB": {"h":"db.php","i":"hdd"},
+        "POST": {"h":"post.php","i":"send"},
         "SSH": {"h":"ssh.php","i":"console"},
       };
       startTime();
