db install / calendar

--- a/pub/index.html
+++ b/pub/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <style>
     body { padding-top: 50px; overflow:hidden;}
-    thead th { text-align:center; }
+    td, th { text-align:center; }
     thead th a { display:block; }
     thead th a:hover, thead th a:focus { text-decoration:none; }
     table { background: #fff; }
@@ -138,18 +138,18 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
-                <th colspan="5"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title"></span></a></th>
-                <th><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
+                <th colspan="2"><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
+                <th colspan="3"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title"></span></a></th>
+                <th colspan="2"><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
               </tr>
               <tr>
-                <th>S<span class="hidden-xs hidden-sm">unday</span></th>
-                <th>M<span class="hidden-xs hidden-sm">onday</span></th>
-                <th>T<span class="hidden-xs hidden-sm">uesday</span></th>
-                <th>W<span class="hidden-xs hidden-sm">ednesday</span></th>
-                <th>T<span class="hidden-xs hidden-sm">hursday</span></th>
-                <th>F<span class="hidden-xs hidden-sm">riday</span></th>
-                <th>S<span class="hidden-xs hidden-sm">aturday</span></th>
+                <th>S<span class="hidden-xs hidden-sm">un</span></th>
+                <th>M<span class="hidden-xs hidden-sm">on</span></th>
+                <th>T<span class="hidden-xs hidden-sm">ue</span></th>
+                <th>W<span class="hidden-xs hidden-sm">ed</span></th>
+                <th>T<span class="hidden-xs hidden-sm">hu</span></th>
+                <th>F<span class="hidden-xs hidden-sm">ri</span></th>
+                <th>S<span class="hidden-xs hidden-sm">at</span></th>
               </tr>
             </thead>
             <tbody></tbody>
