--- a/pub/index.html
+++ b/pub/index.html
@@ -12,6 +12,11 @@
     thead th a { display:block; }
     thead th a:hover, thead th a:focus { text-decoration:none; }
     table { background: #fff; }
+    .light { background: #a7b9e9; }
+    .dark { background: #5a69ac; }
+    .black { color: #000; }
+    .white { color: #fff; }
+    .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th { border-top:0px; }
   </style>
   <script src="js/jquery.min.js"></script>
 	<script>
@@ -68,7 +73,7 @@
         html+= "<td></td>";
         c++;
       }
-      $("tbody").html(html);
+      $("#calendar tbody").html(html);
       today(t);
     }
     function prev() {
@@ -98,8 +103,45 @@
       buildCal();
     }
     function today(req) {
-      $("table td").removeClass("info");
+      $("table#calendar td").removeClass("info");
       $("#day-"+req.getFullYear()+"-"+req.getMonth()+"-"+req.getDate()).addClass("info");
+    }
+    function buildChess() {
+      var board = [
+          [0,1,2,3,4,2,1,0],
+          [5,5,5,5,5,5,5,5],
+          [6,6,6,6,6,6,6,6],
+          [6,6,6,6,6,6,6,6],
+          [6,6,6,6,6,6,6,6],
+          [6,6,6,6,6,6,6,6],
+          [7,7,7,7,7,7,7,7],
+          [8,9,10,11,12,10,9,8],
+        ]
+        , pieces = ["tower black","knight black", "bishop black","queen black","king black","pawn black","","pawn white","tower white","knight white","bishop white","queen white","king white"]
+        , html = ""
+        , square = true
+        , rank = 8
+        , files = ["A","B","C","D","E","F","G","H"]
+        ;
+      $.each(board,function(k,v) {
+        html+="<tr><td></td><td></td>";
+        file = 0;
+        $.each(v,function(kk,vv) {
+          html+="<td data-rank='"+rank+"' data-file='"+files[file]+"' class='"+(square?"light":"dark")+"'>";
+          if(square){square=false;}else{square=true;}
+          file++;
+          if(pieces[vv].length > 0) {
+            html+="<span class='glyphicon glyphicon-"+pieces[vv]+"'></span>";
+          }else{
+            html+="&nbsp;";
+          }
+          html+="</td>";
+        });
+        if(square){square=false;}else{square=true;}
+        rank--;
+        html+="<td></td><td></td></tr>";
+      });
+      $("#chess tbody").html(html);
     }
     $(document).ready(function() {
       buildCal();
@@ -119,6 +161,7 @@
           ;
         $(".navbar .nav").append(html);
       });
+      buildChess();
     });
 	</script>
 </head>
@@ -136,7 +179,7 @@
           <h1 id="clock" class="text-center"></h1>
         </div>
         <div class="col-sm-6">
-          <table class="table table-bordered">
+          <table id="calendar" class="table table-bordered">
             <thead>
               <tr>
                 <th colspan="2"><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
@@ -159,4 +202,12 @@
       </div>
     </div>
   </div>
+  <table id="chess" class="table">
+    <thead>
+    </thead>
+    <tbody>
+    </tbody>
+    <tfoot>
+    </tfoot>
+  </table>
 </body></html>
