--- a/pub/index.html
+++ b/pub/index.html
@@ -152,6 +152,7 @@
         "DB": {"h":"db.php","i":"hdd"},
         "POST": {"h":"post.php","i":"send"},
         "SSH": {"h":"ssh.php","i":"console"},
+        "GIT": {"h":"git.php","i":"star"},
       };
       startTime();
       $.each(app,function(k,v) {
