--- a/pub/index.html
+++ b/pub/index.html
@@ -117,6 +117,7 @@
         "SSH": {"h":"ssh.php","i":"console"},
         "GIT": {"h":"git.php","i":"star"},
         "CHESS": {"h":"chess.html","i":"queen"},
+        "PLAY": {"h":"play.php","i":"play"},
       };
       startTime();
       $.each(app,function(k,v) {
