--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -1,34 +1,47 @@
 <script id="tpl-home" type="text/html">
 <div class="home jumbotron">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <h2 id="date" class="text-center"></h2>
-          <h1 id="clock" class="text-center"></h1>
-        </div>
-        <div class="col-sm-6">
-          <table id="calendar" class="table table-bordered">
-            <thead>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2 id="date" class="text-center"></h2>
+        <h1 id="clock" class="text-center"></h1>
+      </div>
+      <div class="col-sm-6">
+        <table id="calendar" class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="2"><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
+              <th colspan="3"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title">{{title}}</span></a></th>
+              <th colspan="2"><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
+            </tr>
+            <tr>
+              <th>S<span class="hidden-xs hidden-sm">un</span></th>
+              <th>M<span class="hidden-xs hidden-sm">on</span></th>
+              <th>T<span class="hidden-xs hidden-sm">ue</span></th>
+              <th>W<span class="hidden-xs hidden-sm">ed</span></th>
+              <th>T<span class="hidden-xs hidden-sm">hu</span></th>
+              <th>F<span class="hidden-xs hidden-sm">ri</span></th>
+              <th>S<span class="hidden-xs hidden-sm">at</span></th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#calendar}}
               <tr>
-                <th colspan="2"><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
-                <th colspan="3"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title"></span></a></th>
-                <th colspan="2"><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
+                {{#.}}<td id="day-{{year}}-{{month}}-{{.}}">{{.}}</td>{{/.}}
               </tr>
-              <tr>
-                <th>S<span class="hidden-xs hidden-sm">un</span></th>
-                <th>M<span class="hidden-xs hidden-sm">on</span></th>
-                <th>T<span class="hidden-xs hidden-sm">ue</span></th>
-                <th>W<span class="hidden-xs hidden-sm">ed</span></th>
-                <th>T<span class="hidden-xs hidden-sm">hu</span></th>
-                <th>F<span class="hidden-xs hidden-sm">ri</span></th>
-                <th>S<span class="hidden-xs hidden-sm">at</span></th>
-              </tr>
-            </thead>
-            <tbody>
-						</tbody>
-          </table>
-        </div>
+            {{/calendar}}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
+</div>
+<div class="container">
+  <a href="#audio" class="btn btn-default">AUDIO</a>
+  <a href="#video" class="btn btn-default">VIDEO</a>
+  <a href="#edit" class="btn btn-default">EDIT</a>
+  <a href="#post" class="btn btn-default">POST</a>
+  <a href="#ssh" class="btn btn-default">SSH</a>
+  <a href="#git" class="btn btn-default">GIT</a>
+</div>
 </script>
