--- a/pub/index.html
+++ b/pub/index.html
@@ -42,7 +42,10 @@
 				</div>
 			</div>
  		</div>
-    <div id="page-content"><div id="app"></div></div>
+    <div id="page-content">
+      <div id="e" class="hidden alert" role="alert"> </div>
+      <div id="app"></div>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/mustache.min.js"></script>
