--- a/pub/htm/login.htm
+++ b/pub/htm/login.htm
@@ -14,7 +14,7 @@
             <div class="panel-heading"><span class="glyphicon glyphicon-user"></span> User Profile</div>
             <div class="panel-body">
               <div id="login" class="hidden">
-                <form>
+                <form id="userpass">
                 <p class='container'>
                 <div class='row-fluid'>
                 <input type='text' id='u' class='form-control' placeholder='Username' />
