--- a/pub/htm/audio.htm
+++ b/pub/htm/audio.htm
@@ -10,7 +10,7 @@
         <button type="button" class="col-sm-2 btn btn-default" onclick="javascript:ra();"><span class="glyphicon glyphicon-random"></span></button>
         <button type="button" class="col-sm-2 btn btn-default" onclick="javascript:dn();"><span class="glyphicon glyphicon-volume-down"></span></button>
         <button type="button" class="col-sm-2 btn btn-default" onclick="javascript:up();"><span class="glyphicon glyphicon-volume-up"></span></button>
-        <button type="button" class="col-sm-2 btn btn-default" onclick="javascript:li();"><span class="glyphicon glyphicon-list"></span></button>
+        <button type="button" class="col-sm-2 btn btn-default" onclick="javascript:list();"><span class="glyphicon glyphicon-list"></span></button>
 			</div>
     </div>
   </div>
