--- a/pub/htm/login.htm
+++ b/pub/htm/login.htm
@@ -53,7 +53,8 @@
                 </div>
                 <p class="container">
                   <div class="row-fluid">
-                    <div id="logout" class="btn btn-primary col-xs-12"> Logout <span class="glyphicon glyphicon-log-out"></span> </div>
+                    <div id="update" class="btn btn-default col-xs-6"> Update <span class="glyphicon glyphicon-download"></span> </div>
+                    <div id="logout" class="btn btn-primary col-xs-6"> Logout <span class="glyphicon glyphicon-log-out"></span> </div>
                   </div>
                 </p>
               </div>
