--- a/pub/htm/login.htm
+++ b/pub/htm/login.htm
@@ -53,8 +53,8 @@
                 </div>
                 <p class="container">
                   <div class="row-fluid">
-                    <div id="update" class="btn btn-default col-xs-6"> Update <span class="glyphicon glyphicon-download"></span> </div>
-                    <div id="logout" class="btn btn-primary col-xs-6"> Logout <span class="glyphicon glyphicon-log-out"></span> </div>
+                    <a href="javascript:update();" class="btn btn-default col-xs-6"> Update <span class="glyphicon glyphicon-download"></span> </a>
+                    <a href="javascript:logout();" class="btn btn-primary col-xs-6"> Logout <span class="glyphicon glyphicon-log-out"></span> </a>
                   </div>
                 </p>
               </div>
