--- a/pub/htm/audio.htm
+++ b/pub/htm/audio.htm
@@ -3,14 +3,31 @@
   <div id="body"></div>
   <div class="row">
     <div id="controls" class="col-sm-12">
-			<div class="col-sm-12 btn-group" role="group" aria-label="...">
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-play"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-pause"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:fo();"><span class="glyphicon glyphicon-forward"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:ra();"><span class="glyphicon glyphicon-random"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:dn();"><span class="glyphicon glyphicon-volume-down"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:up();"><span class="glyphicon glyphicon-volume-up"></span></button>
-				<button type="button" class="col-sm-2 btn btn-default" onclick="javascript:list();"><span class="glyphicon glyphicon-list"></span></button>
+			<div class="btn-group btn-group-justified" role="group" aria-label="...">
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:st();"><span class="glyphicon glyphicon-step-backward"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-play"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-pause"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:fo();"><span class="glyphicon glyphicon-forward"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:ra();"><span class="glyphicon glyphicon-random"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:dn();"><span class="glyphicon glyphicon-volume-down"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:up();"><span class="glyphicon glyphicon-volume-up"></span></button>
+				</div>
+				<div class="btn-group">
+				<button type="button" class="btn btn-default" onclick="javascript:list();"><span class="glyphicon glyphicon-list"></span></button>
+				</div>
 			</div>
     </div>
   </div>
