--- a/pub/index.html
+++ b/pub/index.html
@@ -28,9 +28,9 @@
 				<div class="navbar-header">
 					<a class="navbar-toggle"> 
 						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<span class="icon-bar forward"></span>
+						<span class="icon-bar backward"></span>
+						<span class="icon-bar none"></span>
 					</a>
 					<form class="col-xs-10 col-sm-12 navbar-right" role="form" id="search" method="POST" >
 						<input type="hidden" name="req" value="search" />
