--- a/pub/htm/login.htm
+++ b/pub/htm/login.htm
@@ -32,6 +32,18 @@
                 </p ></form>
               </div>
               <div id="profile" class="hidden">
+								<div class="row-fluid">
+									<div class="col-sm-4 col-xs-12"><strong>User <span class="glyphicon glyphicon-user"></span></strong></div>
+									<div class="col-sm-8 col-xs-12 user"></div>
+								</div>
+								<div class="row-fluid">
+									<div class="col-sm-4 col-xs-12"><strong>SSH <span class="glyphicon glyphicon-certificate"></span></strong></div>
+									<div class="col-sm-8 col-xs-12 pub"></div>
+								</div>
+								<div class="row-fluid">
+									<div class="col-sm-4 col-xs-12"><strong>Logs <span class="glyphicon glyphicon-list"></span></strong></div>
+									<div class="col-sm-8 col-xs-12 logs"></div>
+								</div>
                 <div class="table-responsive">
                   <table class="table">
                     <tr>
